# GTestSetupRemoteDownload

./: .gitignore  LICENSE  README.md
GTestSetup/: CMakeLists.txt
GTestSetup/src/main/: MyClass.cpp  MyClass.h  main.cpp
GTestSetup/src/test/: CMakeLists.txt  MyClassTest.cpp
